--- a/client/views/routes/addhh.html
+++ b/client/views/routes/addhh.html
@@ -5,79 +5,21 @@
     <div class="addhhFormDiv form-group">
         <label class="control-label col-sm-2" for="name">Name:</label>
         <div class="col-sm-offset+1 col-sm-9">
-            <input type="text" name="name" id="name" class="form-control input-lg" placeholder="Enter Bar/Restaurant Name: (REQUIRED - include area code)" required/>
+            <input type="text" name="name" id="name" class="form-control input-lg" placeholder="Enter Bar/Restaurant Name:" required/>
         </div>
     </div>
-    <!--<div class="addhhFormDiv form-group">-->
-        <!--<label class="control-label col-sm-2" for="phonenumber">Phone Number:</label>-->
-        <!--<div class="col-sm-offset+1 col-sm-9">-->
-            <!--<input type="text" name="phonenumber" id="phonenumber" class="form-control input-lg" placeholder="Enter Phone Number: (REQUIRED)" required/>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="addhhFormDiv form-group">-->
-        <!--<label class="control-label col-sm-2" for="time">Times:</label>-->
-        <!--<div class="col-sm-offset+1 col-sm-9">-->
-            <!--<input type="text" name="time" id="time" class="form-control input-lg" placeholder=" Enter Happy Hour times: (REQUIRED)" required/>-->
-        <!--</div>-->
-    <!--</div>-->
     <div class="addhhFormDiv form-group">
-        <label class="control-label col-sm-2" for="deals">Deals:</label>
+        <label class="control-label col-sm-2" for="deals">Notes:</label>
         <div class="col-sm-offset+1 col-sm-9">
-            <input type="text" name="deals" id="deals" class="form-control input-lg" placeholder="Enter the deals: (REQUIRED)" required/>
+            <input type="text" name="deals" id="deals" class="form-control input-lg" placeholder="Enter the deals:" required/>
         </div>
     </div>
-    <!--<div class="addhhFormDiv form-group">-->
-        <!--<label class="control-label col-sm-2" for="focus">Focus: </label>-->
-        <!--<div class="col-sm-offset+1 col-sm-9 radioFocus">-->
-            <!--<div class="col-sm-offset-1 col-xs-offset-2">-->
-                <!--<p>Drink-focused?</p>-->
-                <!--<input type="radio" class="input-lg" name="focus" id="focus" value="drink" checked>-->
-                <!--<p>Food-focused?</p>-->
-                <!--<input type="radio" class="input" name="focus" value="food">-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="addhhFormDiv form-group">-->
-        <!--<label class="control-label col-sm-2" for="address">Street Address:</label>-->
-        <!--<div class="col-sm-offset+1 col-sm-9">-->
-            <!--<input type="text" name="address" id="address" class="form-control input-lg" placeholder="Enter Street Address: (REQUIRED)" required/>-->
-        <!--</div>-->
-    <!--</div>-->
     <div class="addhhFormDiv form-group">
         <label class="control-label col-sm-2" for="city">City:</label>
         <div class="col-sm-offset+1 col-sm-9">
-            <input type="text" name="city" id="city" class="form-control input-lg" placeholder="Enter City: (REQUIRED)" required/>
+            <input type="text" name="city" id="city" class="form-control input-lg" placeholder="Enter City:" required/>
         </div>
     </div>
-    <!--<div class="addhhFormDiv form-group">-->
-        <!--<label class="control-label col-sm-2" for="zipcode">Zip:</label>-->
-        <!--<div class="col-sm-offset+1 col-sm-9">-->
-            <!--<input type="number" name="zipcode" id="zipcode" class="form-control input-lg" placeholder="Enter Est. Zip code:  (REQUIRED)" required/>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="addhhFormDiv form-group">-->
-        <!--<label class="control-label col-sm-2" for="empAdded">Employed Here?</label>-->
-        <!--<div class="col-sm-offset+1 col-sm-9">-->
-            <!--<div class="radioFocus col-sm-offset-1 col-xs-offset-2">-->
-                <!--<input type="checkbox" class="input-lg" name="empAdded" id="empAdded" value="false" ng-model="empAdded.value">-->
-            <!--</div>-->
-            <!--<hr>-->
-            <!--<div class="subform" ng-show="empAdded.value">-->
-                <!--<div class="addhhFormDiv form-group">-->
-                    <!--<label class="control-label col-sm-2" for="empPosition">Position:</label>-->
-                    <!--<div class="col-sm-offset+1 col-sm-9">-->
-                        <!--<input type="text" name="empPosition" id="empPosition" class="form-control input-lg" placeholder="Enter Your Position">-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="addhhFormDiv form-group">-->
-                    <!--<label class="control-label col-sm-2" for="avoid">Avoid the:</label>-->
-                    <!--<div class="col-sm-offset+1 col-sm-9">-->
-                        <!--<input type="text" name="avoid" id="avoid" class="form-control input-lg" placeholder="Enter anything to avoid, have fun with it!">-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
     <div class="addhhFormDiv form-group">
         <div class="col-sm-offset-1 col-sm-10">
             <button type="submit" class="btn btn-info" ng-disabled="addhhform.$invalid" ng-click="incUserActivity(user)" value="Submit">Submit</button>
