--- a/server/public/assets/views/routes/search.html
+++ b/server/public/assets/views/routes/search.html
@@ -4,12 +4,12 @@
     </div>
     <form class="form-horizontal" role="form" name="citysearch">
         <div class="form-group">
-            <label class="control-label col-sm-2" for="city">Zipcode:</label>
+            <label class="control-label col-sm-2" for="city">City:</label>
             <div class="col-sm-offset+1 col-sm-9">
-                <input ng-model="city" type="number" name="city" id="city" class="form-control input-lg" placeholder="City" required/>
+                <input ng-model="city" type="text" name="city" id="city" class="form-control input-lg" placeholder="City" required/>
             </div>
             <div class="col-sm-12">
-                <p ng-show="citysearch.city.$error.required">Zipcode is required</p>
+                <p ng-show="citysearch.city.$error.required">City is required</p>
             </div>
         </div>
         <div class="form-group">
@@ -18,5 +18,5 @@
             </div>
         </div>
     </form>
-    <a href="#addhh">Stumble on a great Happy Hour? Add it here!</a>
+    <a href="#addhh">Add your restaurant... fatty.</a>
 </div>
