--- a/server/public/assets/views/routes/addhh.html
+++ b/server/public/assets/views/routes/addhh.html
@@ -1,23 +1,23 @@
 <div class="well">
-    <h2><img src="/assets/views/images/Hosehead-2.png" alt="Hosehead" height="38" width="50">ADD:</h2>
+    <h2>ADD:</h2>
 </div>
 <form action="/add" method="post" class="form-horizontal" role="form" name="addhhform">
     <div class="addhhFormDiv form-group">
         <label class="control-label col-sm-2" for="name">Name:</label>
         <div class="col-sm-offset+1 col-sm-9">
-            <input type="text" name="name" id="name" class="form-control input-lg" placeholder="Enter Bar/Restaurant Name:" required/>
+            <input type="text" name="name" id="name" class="form-control input-lg" placeholder="Bar/Restaurant Name:" required/>
         </div>
     </div>
     <div class="addhhFormDiv form-group">
         <label class="control-label col-sm-2" for="deals">Notes:</label>
         <div class="col-sm-offset+1 col-sm-9">
-            <input type="text" name="deals" id="deals" class="form-control input-lg" placeholder="Enter the deals:" required/>
+            <input type="text" name="deals" id="deals" class="form-control input-lg" placeholder="Did it suck?" required/>
         </div>
     </div>
     <div class="addhhFormDiv form-group">
         <label class="control-label col-sm-2" for="city">City:</label>
         <div class="col-sm-offset+1 col-sm-9">
-            <input type="text" name="city" id="city" class="form-control input-lg" placeholder="Enter City:" required/>
+            <input type="text" name="city" id="city" class="form-control input-lg" placeholder="Enter the City:" required/>
         </div>
     </div>
     <div class="addhhFormDiv form-group">
