--- a/server/public/assets/views/routes/landing.html
+++ b/server/public/assets/views/routes/landing.html
@@ -17,6 +17,7 @@
         </ul>
         <div class="userBar">
             <p>Welcome: {{currentUser.username}}, Rank: {{currentUser.rank}}</p>
+            <a href="/assets/views/index.html" class="btn btn-default pamagain" role="button">Want to look at Pam again?</a>
         </div>
     </div>
     <hr>
